# npfl087-2026-dspy

./: README.md  optimized_b2_mipro.json  pyproject.toml
notebooks/: 01_DSPy_Intro.ipynb
